--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" type="image/png" href="../assets/images/bg.jpg" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 	</head>
 <body>
   <app-root></app-root>
