--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 		<title>LenuelOnline</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="shortcut icon" type="image/png" href="../assets/images/bg.jpg" />
+    <link rel="shortcut icon" type="image/png" href="../assets/images/Ledéveloppeurcréatif_logo-removebg.png" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
